--- a/CourtApp.Web/Areas/Litigation/Views/CaseWork/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseWork/_ViewAll.cshtml
@@ -12,7 +12,7 @@
                             @localizer["Case Description"]
                         </th>
                         <th>
-                            @localizer["Last Work Date"]
+                            @localizer["Last Date of Work"]
                         </th>
                     </tr>
                 </thead>
