--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_AgainstCaseDetail.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_AgainstCaseDetail.cshtml
@@ -34,7 +34,6 @@
 <div class="form-group row">
     <fieldset class="scheduler-border">
         <input type="hidden" asp-for="AgainstCaseDetails[0].CaseId" />
-
         <legend class="scheduler-border">Against Case Decision For</legend>
 
         <div class="form-group row">
@@ -51,7 +50,7 @@
                 <div class="input-group">
                     <select class="form-control select2bs4" id="AgStateId"
                             asp-for="AgainstCaseDetails[0].StateId"
-                            asp-items="@Model.States">
+                            asp-items="@Model.AgainstCaseDetails[0].AStates">
                         <option></option>
                     </select>
                 </div>
@@ -65,7 +64,7 @@
                     <select class="form-control select2bs4"
                             id="AgCourtTypeId"
                             asp-for="AgainstCaseDetails[0].CourtTypeId"
-                            asp-items="@Model.CourtTypes">
+                            asp-items="@Model.AgainstCaseDetails[0].ACourtTypes">
                         <option></option>
                     </select>
                 </div>
@@ -75,7 +74,7 @@
                 <div class="input-group">
                     <select class="form-control select2bs4" id="AgBenchId"
                             asp-for="AgainstCaseDetails[0].BenchId"
-                            asp-items="@Model.Courts">
+                            asp-items="@Model.AgainstCaseDetails[0].ACourts">
                         <option></option>
                     </select>
                 </div>
@@ -85,7 +84,7 @@
                 <div class="input-group">
                     <select class="form-control select2bs4" id="AgCourtDistrictId"
                             asp-for="AgainstCaseDetails[0].CourtDistrictId"
-                            asp-items="@Model.CourtDistricts">
+                            asp-items="@Model.AgainstCaseDetails[0].ACourtDistricts">
                         <option></option>
                     </select>
                 </div>
@@ -100,7 +99,7 @@
                         <select class="form-control select2bs4"
                                 id="AgComplexId"
                                 asp-for="AgainstCaseDetails[0].ComplexId"
-                                asp-items="@Model.ComplexBenchs">
+                                asp-items="@Model.AgainstCaseDetails[0].AComplexBenchs">
                             <option></option>
                         </select>
                     </div>
@@ -111,10 +110,35 @@
                         <select class="form-control select2bs4"
                                 id="AgCourtId"
                                 asp-for="AgainstCaseDetails[0].CourtId"
-                                asp-items="@Model.Courts">
+                                asp-items="@Model.AgainstCaseDetails[0].ACourts">
                             <option></option>
                         </select>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label class="col-md-2 col-form-label">@localizer["Case Category"]</label>
+            <div class="col-md-4">
+                <div class="input-group">
+                    <select class="form-control select2bs4"
+                            id="AgCaseCategoryId"
+                            asp-for="AgainstCaseDetails[0].CaseCategoryId"
+                            asp-items="@Model.AgainstCaseDetails[0].ACaseNatures">
+                        <option></option>
+                    </select>
+                </div>
+            </div>
+            <label class="col-md-2 col-form-label">@localizer["Case Type"]</label>
+            <div class="col-md-4">
+                <div class="input-group">
+                    <select class="form-control select2bs4"
+                            id="AgCaseTypeId"
+                            asp-for="AgainstCaseDetails[0].CaseTypeId"
+                            asp-items="@Model.AgainstCaseDetails[0].ATypeOfCases">
+                        <option></option>
+                    </select>
                 </div>
             </div>
         </div>
@@ -134,33 +158,7 @@
                     <select class="form-control select2bs4"
                             id="AgCaseYear"
                             asp-for="AgainstCaseDetails[0].CaseYear"
-                            asp-items="@Model.Years">
-                        <option></option>
-                    </select>
-                </div>
-            </div>
-
-            <label class="col-md-2 col-form-label">@localizer["Case Category"]</label>
-            <div class="col-md-4">
-                <div class="input-group">
-                    <select class="form-control select2bs4"
-                            id="AgCaseCategoryId"
-                            asp-for="AgainstCaseDetails[0].CaseCategoryId"
-                            asp-items="@Model.CaseNatures">
-                        <option></option>
-                    </select>
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="col-md-2 col-form-label">@localizer["Case Type"]</label>
-            <div class="col-md-4">
-                <div class="input-group">
-                    <select class="form-control select2bs4"
-                            id="AgCaseTypeId"
-                            asp-for="AgainstCaseDetails[0].CaseTypeId"
-                            asp-items="@Model.TypeOfCases">
+                            asp-items="@Model.AgainstCaseDetails[0].AYears">
                         <option></option>
                     </select>
                 </div>
@@ -180,7 +178,7 @@
                     <select class="form-control select2bs4"
                             id="AgCisYear"
                             asp-for="AgainstCaseDetails[0].CisYear"
-                            asp-items="@Model.Years">
+                            asp-items="@Model.AgainstCaseDetails[0].AYears">
                         <option></option>
                     </select>
                 </div>
@@ -214,7 +212,8 @@
                 <div class="input-group">
                     <select class="form-control select2bs4"
                             id="AgCadreId"
-                            asp-for="AgainstCaseDetails[0].Cadre" asp-items="@Model.Cadres">
+                            asp-for="AgainstCaseDetails[0].Cadre" 
+                            asp-items="@Model.AgainstCaseDetails[0].ACadres">
                         <option></option>
                     </select>
                 </div>
