--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtComplex/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtComplex/_CreateOrEdit.cshtml
@@ -58,7 +58,7 @@
                     <span asp-validation-for="Name_Hn" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            @* <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["Abbreviation"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
@@ -66,7 +66,7 @@
                     </div>
                     <span asp-validation-for="Abbreviation" class="text-danger"></span>
                 </div>
-            </div>
+            </div> *@
             <div class="form-group row">
                 <div class="col-md-3">
                 </div>
@@ -75,7 +75,7 @@
     </div>
 
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
-        <button type="submit" class="btn btn-success">Save</button>
+        <button type="submit" class="btn btn-success">Update</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
@@ -104,7 +104,7 @@
     });
     $("#StateId").on("change", function () {
         $("#CourtDistrictId").empty();
-        $.getJSON("/LawyerDiary/CourtComplex/LoadCourtDistrict?StateId=" + $("#StateId").val(), function (data) {
+        $.getJSON("/LawyerDiary/CourtComplex/LoadCourtDistrictByState?StateId=" + $("#StateId").val(), function (data) {
             $.each(data.Data, function (i, item) {
                 $("#CourtDistrictId").append(`<option /><option value="${item.Id}">${item.Name_En}</option>`);
             });
