--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtDistrict/_Edit.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtDistrict/_Edit.cshtml
@@ -47,7 +47,7 @@
                     <span asp-validation-for="Name_Hn" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+           @*  <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["Abbreviation"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
@@ -55,7 +55,7 @@
                     </div>
                     <span asp-validation-for="Abbreviation" class="text-danger"></span>
                 </div>
-            </div>
+            </div> *@
             <div class="form-group row">
                 <div class="col-md-3">
                 </div>
