--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtDistrict/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtDistrict/_ViewAll.cshtml
@@ -6,7 +6,7 @@
             <th>State</th>
             @* <th>District</th> *@
             <th>Name</th>
-            <th>Abbreviation</th>
+            @* <th>Abbreviation</th> *@
             @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Books.Delete)).Result.Succeeded
             || (AuthorizationService.AuthorizeAsync(User, Permissions.Books.Edit)).Result.Succeeded)
             {
@@ -33,9 +33,9 @@
                 <td>
                     @bt.Name_En
                 </td>
-                <td>
+               @*  <td>
                     @bt.Abbreviation
-                </td>
+                </td> *@
                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Books.Delete)).Result.Succeeded || (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
                 {
                     <td text-right">
