Multi insert implementation

--- a/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/_ViewAll.cshtml
@@ -5,7 +5,7 @@
             <th>Work</th>
             <th>Name(En)</th>
             <th>Name(Hn)</th>
-            <th>Abbreviation</th>
+           @*  <th>Abbreviation</th> *@
             <th>Actions</th>
         </tr>
     </thead>
@@ -23,9 +23,9 @@
                 <td>
                     @bt.Name_Hn
                 </td>
-                <td>
+               @*  <td>
                     @bt.Abbreviation
-                </td>
+                </td> *@
                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Delete)).Result.Succeeded ||
                (AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Edit)).Result.Succeeded)
                 {
