--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtDistrict/_Create.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtDistrict/_Create.cshtml
@@ -26,8 +26,14 @@
 </style>
 @model CourtDistrictViewModel
 <form id="create-form" method="post" asp-controller="CourtDistrict" asp-action="OnPostCreateOrEdit" asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
-    <div class="row">
+    <div class="row">        
         <div class="col-md-12">
+            @if (@Model.Message != null)
+            {
+                <div class="form-group row">
+                    <partial name="_StatusMessage" model="@Model.Message" />
+                </div>
+            }
             <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["State"]</label>
                 <div class="col-md-9">
@@ -42,7 +48,7 @@
             <div class="form-group row">
                 <fieldset class="scheduler-border">
                     <legend class="scheduler-border">Add Court District</legend>
-                    <table id="tblCourtDistrict" border="1" style="width:100%!important">
+                    <table id="tblCdistrict" border="1" style="width:100%!important">
                         <thead>
                             <tr>
                                 <th width="45%"><label class="col-md-3 col-form-label">Name(En)</label></th>
@@ -52,8 +58,8 @@
                         </thead>
                         <tbody class="data-repeater">
                             <tr class="kolom">
-                                <td><input type="text" asp-for="CourtDistricts[0].Name_En" width="300px" placeholder="Please enter case type (english)" class="form-control" /></td>
-                                <td><input type="text" asp-for="CourtDistricts[0].Name_Hn" width="300px" placeholder="Please enter case type (hindi)" class="form-control" /></td>
+                                <td><input type="text" asp-for="CourtDistricts[0].Name_En" width="300px" placeholder="Please enter case type (english)" class="form-control"/></td>
+                                <td><input type="text" asp-for="CourtDistricts[0].Name_Hn" width="300px" placeholder="Please enter case type (hindi)" class="form-control"/></td>
                                 <td class="btn-repeater">
                                     <button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
                                 </td>
@@ -115,7 +121,6 @@
     </div>
 </form>
 <script type="text/javascript" language=javascript>
-
     $.validator.unobtrusive.parse(document);
     $("#StateId").select2({
         placeholder: "Select a state",
@@ -124,14 +129,7 @@
             return m;
         }
     });
-    // $("#DistrictId").select2({
-    //     placeholder: "Select a district",
-    //     theme: "bootstrap4",
-    //     escapeMarkup: function (m) {
-    //         return m;
-    //     }
-    // });
-
+    
     $("#StateId").on("change", function () {
         $("#DistrictId").empty();
         $.getJSON("/LawyerDiary/CourtDistrict/LoadDistricts?StateCode=" + $("#StateId").val(), function (data) {
@@ -140,17 +138,19 @@
             });
         });
     });
-    var btn_delete = '<button type="button" onclick="removeKolom($(this))" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>';
-     var btn_add = '<button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>';
+    
+     var btn_delete = '<button type="button" onclick="removeKolom($(this))" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>';
+    var btn_add = '<button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>';
 
     function removeKolom(e) {
          e.parents('.kolom').remove();
      }
 
-    function addElement(e) {
-        var trlength = $('#tblCourtDistrict tbody tr').length;
+    function addElement(e) {    
+        debugger;
+        var trlength = $('#tblCdistrict tbody tr').length;
         if (validateNameEn()) {
-        var clonedRow = $('#tblCourtDistrict tbody tr:last').clone();
+        var clonedRow = $('#tblCdistrict tbody tr:last').clone();
         clonedRow.find('input').each(function (i) {
             var BName = "", BenchId;
             if (i === 0) {
@@ -161,20 +161,22 @@
                 NameAtr = "CourtDistricts[" + trlength + "].Name_Hn";
                 IdAtr = "CourtDistricts_" + trlength + "__Name_Hn";
             }
+            
             $(this).attr('name', NameAtr).attr('id', IdAtr);
         });
         clonedRow.find('button').find('button').replaceWith(btn_add);
         clonedRow.find('button.add-btn-repeat').replaceWith(btn_delete);
         clonedRow.find("input").val("");
-        $('#tblCourtDistrict tbody').append(clonedRow);
+        $('#tblCdistrict tbody').append(clonedRow);
         }else{
-            alert("Please fill in complex name before adding a new row.");
+            alert("Please fill in district detail before adding a new row.");
         }
     }
         // Function to validate the Name_En input
     function validateNameEn() {
+        debugger;
         var isValid = true;
-        var nameEnInput = $('#tblCourtDistrict tbody tr:last input[name*="Name_En"]');
+        var nameEnInput = $('#tblCdistrict tbody tr:last input[name*="Name_En"]');
         if (nameEnInput.val().trim() === "") {
             isValid = false;
             nameEnInput.addClass('error'); // Add error class to highlight the invalid input
@@ -186,7 +188,7 @@
         // Function to validate the inputs
     function validateInputs() {
         var isValid = true;
-        $('#tblCourtDistrict tbody tr:last input[name*="Name_En"]').each(function () {
+        $('#tblCdistrict tbody tr:last input[name*="Name_En"]').each(function () {
             if ($(this).val().trim() === "") {
                 isValid = false;
                 $(this).addClass('error'); // Add error class to highlight the invalid input
