--- a/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_Create.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_Create.cshtml
@@ -23,8 +23,14 @@
 </style>
 @model ProceedingSubHeadViewModel
 <form id="create-form" method="post" asp-controller="ProceedingSubHead" asp-action="OnPostCreateOrEdit" asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
-    <div class="row">
+    <div class="row">        
         <div class="col-md-12">
+            @if (@Model.Message != null)
+            {
+                <div class="form-group row">
+                    <partial name="_StatusMessage" model="@Model.Message" />
+                </div>
+            }
             <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["Head"]</label>
                 <div class="col-md-9">
@@ -39,7 +45,7 @@
             <div class="form-group row">
                 <fieldset class="scheduler-border">
                     <legend class="scheduler-border">Add Proceeding Heads</legend>
-                    <table id="tblCourtDistrict" border="1" style="width:100%!important">
+                    <table id="tblProcHead" border="1" style="width:100%!important">
                         <thead>
                             <tr>
                                 <th width="45%"><label class="col-md-3 col-form-label">Name(En)</label></th>
@@ -98,21 +104,24 @@
     $.validator.unobtrusive.parse(document);
     $(document).ready(function () {
         $("#HeadId").select2({
-            placeholder: "Select a book type",
+            placeholder: "Select a Head",
             theme: "bootstrap4",
             escapeMarkup: function (m) {
                 return m;
             }
         });
     });
+    var btn_delete = '<button type="button" onclick="removeKolom($(this))" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>';
+    var btn_add = '<button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>';
+
     function removeKolom(e) {
          e.parents('.kolom').remove();
      }
 
     function addElement(e) {
-        var trlength = $('#ProcHeads tbody tr').length;
+        var trlength = $('#tblProcHead tbody tr').length;
         if (validateNameEn()) {
-        var clonedRow = $('#ProcHeads tbody tr:last').clone();
+        var clonedRow = $('#tblProcHead tbody tr:last').clone();
         clonedRow.find('input').each(function (i) {
             var BName = "", BenchId;
             if (i === 0) {
@@ -128,7 +137,7 @@
         clonedRow.find('button').find('button').replaceWith(btn_add);
         clonedRow.find('button.add-btn-repeat').replaceWith(btn_delete);
         clonedRow.find("input").val("");
-        $('#ProcHeads tbody').append(clonedRow);
+        $('#tblProcHead tbody').append(clonedRow);
         }else{
             alert("Please fill in complex name before adding a new row.");
         }
@@ -136,7 +145,7 @@
         // Function to validate the Name_En input
     function validateNameEn() {
         var isValid = true;
-        var nameEnInput = $('#ProcHeads tbody tr:last input[name*="Name_En"]');
+        var nameEnInput = $('#tblProcHead tbody tr:last input[name*="Name_En"]');
         if (nameEnInput.val().trim() === "") {
             isValid = false;
             nameEnInput.addClass('error'); // Add error class to highlight the invalid input
@@ -148,7 +157,7 @@
         // Function to validate the inputs
     function validateInputs() {
         var isValid = true;
-        $('#ProcHeads tbody tr:last input[name*="Name_En"]').each(function () {
+        $('#tblProcHead tbody tr:last input[name*="Name_En"]').each(function () {
             if ($(this).val().trim() === "") {
                 isValid = false;
                 $(this).addClass('error'); // Add error class to highlight the invalid input
