--- a/CourtApp.Web/Areas/LawyerDiary/Views/TypeOfCases/_Create.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/TypeOfCases/_Create.cshtml
@@ -23,8 +23,15 @@
     }
 </style>
 <form id="create-form" method="post" asp-controller="Typeofcases" asp-action="OnPostCreateOrEdit" asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
+    @* <partial name="_StatusMessage" model="@Model.Message" /> *@
     <div class="row">
         <div class="col-md-12">
+            @if (@Model.Message != null)
+            {
+                <div class="form-group row">
+                    <partial name="_StatusMessage" model="@Model.Message" />
+                </div>
+            }
             <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["Court Type"]</label>
                 <div class="col-md-9">
@@ -36,7 +43,7 @@
                     <span asp-validation-for="CourtTypeId" class="text-danger"></span>
                 </div>
             </div>
-            
+
             <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["Case Category"]</label>
                 <div class="col-md-9">
@@ -143,13 +150,14 @@
         });
     });
     var btn_delete = '<button type="button" onclick="removeKolom($(this))" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>';
-     var btn_add = '<button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>';
+    var btn_add = '<button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>';
 
     function removeKolom(e) {
          e.parents('.kolom').remove();
      }
 
     function addElement(e) {
+        debugger;
         var trlength = $('#tblCasetype tbody tr').length;
         if (validateNameEn()) {
         var clonedRow = $('#tblCasetype tbody tr:last').clone();
@@ -162,6 +170,10 @@
             if (i === 1) {
                 NameAtr = "CaseTypes[" + trlength + "].Name_Hn";
                 IdAtr = "CaseTypes_" + trlength + "__Name_Hn";
+            }
+            if (i === 2) {
+                NameAtr = "CaseTypes[" + trlength + "].Abbreviation";
+                IdAtr = "CaseTypes_" + trlength + "__Abbreviation";
             }
             $(this).attr('name', NameAtr).attr('id', IdAtr);
         });
