--- a/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/_Create.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/_Create.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    ViewData["Note"] = localizer["All (*) marked fields are mandatory!"];
-}
-<style>
+﻿<style>
     .div_hide {
         display: none
     }
@@ -24,8 +21,8 @@
         border-bottom: none;
     }
 </style>
-@model CourtComplexViewModel
-<form id="create-form" method="post" asp-controller="CourtComplex" asp-action="OnPostCreateOrEdit" asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
+@model WorkMasterSubViewModel
+<form id="create-form" method="post" asp-controller="WorkMasterSub" asp-action="OnPostCreateOrEdit" asp-route-id="@Model.Id" onsubmit="return jQueryModalPost(this);" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-12">
             @if (@Model.Message != null)
@@ -35,43 +32,33 @@
                 </div>
             }
             <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["State"]</label>
+                <label class="col-md-3 col-form-label">@localizer["Work Master"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select class="form-control select2bs4" asp-for="StateId" asp-items="@Model.States">
+                        <select class="form-control select2bs4"  asp-for="WorkId" asp-items="@Model.WMasters">
                             <option></option>
                         </select>
                     </div>
-                    <span asp-validation-for="StateId" class="text-danger"></span>
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["Court District"]</label>
-                <div class="col-md-9">
-                    <div class="input-group">
-                        <select name="CourtDistrictId" class="form-control select2bs4" id="CourtDistrictId" asp-for="CourtDistrictId" asp-items="@Model.CourtDistricts">
-                            <option></option>
-                        </select>
-                    </div>
-                    <span asp-validation-for="CourtDistrictId" class="text-danger"></span>
+                    <span asp-validation-for="WorkId" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
                 <fieldset class="scheduler-border">
-                    <legend class="scheduler-border">Add Complexes</legend>
-                    <table id="tblCourtBench" border="1" style="width:100%!important">
+                    <legend class="scheduler-border">Add Works</legend>
+                    <table id="tblWorksDt" border="1" style="width:100%!important">
                         <thead>
                             <tr>
-                                <th width="45%"><label class="col-md-3 col-form-label">Name(En)</label></th>
-                                <th width="45%"><label class="col-md-3 col-form-label">Name(Hn)</label></th>
+                                <th width="35%"><label class="col-md-3 col-form-label">Name(En)</label></th>
+                                <th width="35%"><label class="col-md-3 col-form-label">Name(Hn)</label></th>
+                                @* <th width="20%"><label class="col-md-3 col-form-label">Abbreviation</label></th> *@
                                 <th width="10%"></th>
                             </tr>
                         </thead>
                         <tbody class="data-repeater">
                             <tr class="kolom">
-                                <td><input type="text" asp-for="Complexes[0].Name_En" width="300px" placeholder="Please enter complex name in english" class="form-control" /></td>
-                                <td><input type="text" asp-for="Complexes[0].Name_Hn" width="300px" placeholder="Please enter complex name in hindi" class="form-control" /></td>
+                                <td><input type="text" asp-for="Works[0].Name_En" width="300px" placeholder="Please enter work (english)" class="form-control" /></td>
+                                <td><input type="text" asp-for="Works[0].Name_Hn" width="300px" placeholder="Please enter work (hindi)" class="form-control" /></td>
+                                @* <td><input type="text" asp-for="Works[0].Abbreviation" width="300px" placeholder="Please enter case type abbreviation" class="form-control" /></td> *@
                                 <td class="btn-repeater">
                                     <button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
                                 </td>
@@ -82,19 +69,29 @@
             </div>
 
             @* <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["Name (En)"]</label>
+                <label class="col-md-3 col-form-label">@localizer["Name(En)"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <input type="text" placeholder="Please enter name (En)" asp-for="Name_En" name="Name_En" id="Name_En" class="form-control" />
+                        <input type="text" asp-for="Name_En" name="Name_En" id="Name_En" class="form-control" />
                     </div>
                     <span asp-validation-for="Name_En" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-md-3 col-form-label">@localizer["Name (Hn)"]</label>
+                <label class="col-md-3 col-form-label">@localizer["Abbreviation"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <input type="text" placeholder="Please enter name (Hn)" asp-for="Name_Hn" name="Name_Hn" id="Name_Hn" class="form-control" />
+                        <input type="text" asp-for="Abbreviation" class="form-control" />
+                    </div>
+                    <span asp-validation-for="Abbreviation" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label class="col-md-3 col-form-label">@localizer["Name(Hn)"]</label>
+                <div class="col-md-9">
+                    <div class="input-group">
+                        <input type="text" asp-for="Name_Hn" name="Name_En" id="Name_Hn" class="form-control" />
                     </div>
                     <span asp-validation-for="Name_Hn" class="text-danger"></span>
                 </div>
@@ -107,71 +104,61 @@
         </div>
     </div>
 
+
+
     <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
         <button type="submit" class="btn btn-success">Save</button>
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
 <script type="text/javascript" language=javascript>
-     $.validator.unobtrusive.parse(document);
-     var btn_delete = '<button type="button" onclick="removeKolom($(this))" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>';
-     var btn_add = '<button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>';
+    $.validator.unobtrusive.parse(document);
+    $(document).ready(function () {
+        $("#WorkId").select2({
+            placeholder: "Select a type",
+            theme: "bootstrap4",
+            escapeMarkup: function (m) {
+                return m;
+            }
+        });
+    });
+    var btn_delete = '<button type="button" onclick="removeKolom($(this))" class="btn btn-warning"><i class="fa fa-trash" aria-hidden="true"></i></button>';
+    var btn_add = '<button class="add-btn-repeat btn btn-success" onclick="addElement($(this))" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>';
 
-     $("#StateId").select2({
-         placeholder: "Select a state",
-         theme: "bootstrap4",
-         escapeMarkup: function (m) {
-             return m;
-         }
-     });
-
-     $("#CourtDistrictId").select2({
-         placeholder: "Select a court district",
-         theme: "bootstrap4",
-         escapeMarkup: function (m) {
-             return m;
-         }
-     });
-     $("#StateId").on("change", function () {
-         $("#CourtDistrictId").empty();
-         $.getJSON("/LawyerDiary/CourtComplex/LoadCourtDistrictByState?StateId=" + $("#StateId").val(), function (data) {
-             $.each(data.Data, function (i, item) {
-                 $("#CourtDistrictId").append(`<option /><option value="${item.Id}">${item.Name_En}</option>`);
-             });
-         });
-     });
     function removeKolom(e) {
          e.parents('.kolom').remove();
      }
 
     function addElement(e) {
-        var trlength = $('#tblCourtBench tbody tr').length;
+        debugger;
+        var trlength = $('#tblWorksDt tbody tr').length;
         if (validateNameEn()) {
-        var clonedRow = $('#tblCourtBench tbody tr:last').clone();
+        var clonedRow = $('#tblWorksDt tbody tr:last').clone();
         clonedRow.find('input').each(function (i) {
             var BName = "", BenchId;
             if (i === 0) {
-                NameAtr = "Complexes[" + trlength + "].Name_En";
-                IdAtr = "Complexes_" + trlength + "__Name_En";
+                NameAtr = "Works[" + trlength + "].Name_En";
+                IdAtr = "Works_" + trlength + "__Name_En";
             }
             if (i === 1) {
-                NameAtr = "Complexes[" + trlength + "].Name_Hn";
-                IdAtr = "Complexes_" + trlength + "__Name_Hn";
+                NameAtr = "Works[" + trlength + "].Name_Hn";
+                IdAtr = "Works_" + trlength + "__Name_Hn";
             }
+            
             $(this).attr('name', NameAtr).attr('id', IdAtr);
         });
         clonedRow.find('button').find('button').replaceWith(btn_add);
         clonedRow.find('button.add-btn-repeat').replaceWith(btn_delete);
         clonedRow.find("input").val("");
-        $('#tblCourtBench tbody').append(clonedRow);
+        $('#tblWorksDt tbody').append(clonedRow);
         }else{
-            alert("Please fill in complex name before adding a new row.");
+            alert("Please fill in work before adding a new row.");
         }
     }
         // Function to validate the Name_En input
     function validateNameEn() {
         var isValid = true;
-        var nameEnInput = $('#tblCourtBench tbody tr:last input[name*="Name_En"]');
+        var nameEnInput = $('#tblWorksDt tbody tr:last input[name*="Name_En"]');
         if (nameEnInput.val().trim() === "") {
             isValid = false;
             nameEnInput.addClass('error'); // Add error class to highlight the invalid input
@@ -183,7 +170,7 @@
         // Function to validate the inputs
     function validateInputs() {
         var isValid = true;
-        $('#tblCourtBench tbody tr:last input[name*="Name_En"]').each(function () {
+        $('#tblWorksDt tbody tr:last input[name*="Name_En"]').each(function () {
             if ($(this).val().trim() === "") {
                 isValid = false;
                 $(this).addClass('error'); // Add error class to highlight the invalid input
@@ -194,3 +181,4 @@
         return isValid;
     }
 </script>
+
